# NBA-Analytics-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
AutogluonModels/ag-20250516_222535/: learner.pkl  metadata.json
AutogluonModels/ag-20250516_222535/models/: trainer.pkl
AutogluonModels/ag-20250516_222628/: learner.pkl
AutogluonModels/ag-20250516_222628/models/: trainer.pkl
AutogluonModels/ag-20250516_231857/: learner.pkl
AutogluonModels/ag-20250516_231857/models/: trainer.pkl
AutogluonModels/ag-20250516_234048/: learner.pkl
AutogluonModels/ag-20250516_234048/models/: trainer.pkl
AutogluonModels/ag-20250521_235942/: learner.pkl
AutogluonModels/ag-20250521_235942/models/: trainer.pkl
AutogluonModels/ag-20250522_000047/: learner.pkl
AutogluonModels/ag-20250522_000047/models/: trainer.pkl
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  HomePage.css  HomePage.jsx  ResultPage.css  ResultPage.jsx  index.css
model/brunsja01/pts/: learner.pkl
model/brunsja01/pts1/: learner.pkl
model/dortlu01/ast/: learner.pkl
model/dortlu01/blk/: learner.pkl
model/dortlu01/fg/: learner.pkl
model/dortlu01/fg3/: learner.pkl
model/dortlu01/ft/: learner.pkl
model/dortlu01/pts/: learner.pkl  metadata.json
model/dortlu01/reb/: learner.pkl
src/: main.py  quantile_converter.py  train.py
src/api/: model.py  server.py
src/data/: cleanup.py  download.py  pipeline.py  player_dataset.py  processor.py
src/model/: model_registry.py  parlay_evaluator.py  predictor.py  quantile_converter.py
(+10073 files in other folders)
