[project]
name = "parlai"
version = "0.1.0"
requires-python = ">=3.10, < 3.11"
dependencies = [
    "pandas>=1.5,<2.1",
    "numpy>=1.23,<1.26",
    "fastapi[standard]>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0,<3.0",
    "scikit-learn>=1.2,<1.4",
    "autogluon.tabular>=0.8.2"
]

[tool.setuptools.packages.find]
where = ["src"]

